--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "media-queries";
 @import "./button";
+@import "./override";
 
 * {
   margin: 0;
@@ -14,5 +15,4 @@
   }
 }
 
-input:-webkit-autofill { box-shadow: 0 0 0 1000px #222222 inset !important;}
 
